fixed overflow in plans headings

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -355,6 +355,13 @@ h1 {
   background-repeat: no-repeat;
   background-position: center;
 }
+
+.plan-6 .plan-image-container {
+  background: url("../assets/img/plan-dorado.webp");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
 .plan h3 {
   position: absolute;
   bottom: 6%;
@@ -363,7 +370,7 @@ h1 {
   color: #fff;
   text-transform: uppercase;
   font-family: "sfBold";
-  font-size: 1.7em;
+  font-size: 1.4em;
   padding-left: 0.7rem;
 }
 
@@ -1109,7 +1116,7 @@ footer iframe {
   }
   .heading-subtitle {
     font-size: 1.1em;
-    width: 80%;
+    width: 68%;
     margin: -1rem auto;
   }
   .mission-container p {
